# anime-dl

./: .gitignore  README.md  doc.md  install.bat  install.sh  main.py  pyproject.toml  utils.py
.trae/documents/: Refactor and Batch Download Implementation Plan.md
extractors/: streamtape.py  voiranime.py
src/: cli.py  main.py  utils.py
src/core/: base.py  config.py  downloader.py  orchestrator.py
src/extractors/: streamtape.py  voiranime.py
src/extractors/players/: streamtape.py
tests/: test_streamtape.py
