[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "anime-dl"
version = "0.1.0"
description = "VoirAnime Downloader CLI"
readme = "README.md"
requires-python = ">=3.7"
dependencies = [
    "requests",
    "beautifulsoup4",
    "rich",
]

[project.scripts]
vadl = "main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
py-modules = ["cli", "main", "utils"]
